Alterando classe Aluno para ser recebida pelo dapr
