# microservmatricula/server/common/api.yml
@@ -11,24 +11,8 @@ tags:
 - name: Specification
   description: The swagger API specification
 paths:
-  /alunos:
-    get: 
-      responses:
-        200:
-          description: Return all
-          content: {}
-    post: 
-      responses:
-        200:
-          description: Return all
-          content: {}
-  /alunos/{id}:
-    get:
-      responses:
-        200:
-          description: Return all
-          content: {}
-    put:
+  /alunos/event:
+    post:
       responses:
         200:
           description: Return all
